fix(website): unnecessary horizontal scroll on md screen

--- a/apps/website/src/style.css
+++ b/apps/website/src/style.css
@@ -65,6 +65,7 @@ a {
     max-width: 1200px;
     width: 90%;
     margin: auto;
+    box-sizing: border-box;
 }
 
 section {
